--- a/aoc/2015-3.md
+++ b/aoc/2015-3.md
@@ -33,24 +33,7 @@ fn read_file(filepath: &str) -> String {
   binding.split('\n').next().unwrap().to_string()
 }
 
-fn found_houses(line: &str) -> usize {
-  let mut houses: Houses = HashSet::new();
-  let mut pos: Pos = (0,0);
-  houses.insert(pos);
-  for c in line.chars() {
-    match c {
-      '>' => pos = (pos.0, pos.1 + 1),
-      '<' => pos = (pos.0, pos.1 - 1),
-      'v' => pos = (pos.0 + 1, pos.1),
-      '^' => pos = (pos.0 - 1, pos.1),
-       _  => pos = pos,
-    }
-    houses.insert(pos);
-  }
-  houses.len()
-}
-
-fn robo_santa(line: &str) -> usize {
+fn found_houses(line: &str, robo_santa:  bool) -> usize {
   let mut houses: Houses = HashSet::new();
   let mut pos: Pos = (0,0);
   let mut robo_pos: Pos = (0,0);
@@ -64,20 +47,21 @@ fn robo_santa(line: &str) -> usize {
        _  => pos = pos,
     }
     houses.insert(pos);
-    (pos, robo_pos) = (robo_pos, pos);
+    if robo_santa {
+      (pos, robo_pos) = (robo_pos, pos);
+    }
   }
   houses.len()
 }
 
-
 fn part1() {
   let line = read_file("INPUT");
-  println!("Part 1: {}", found_houses(&line));
+  println!("Part 1: {}", found_houses(&line, false));
 }
 
 fn part2() {
   let line = read_file("INPUT");
-  println!("Part 2: {}", robo_santa(&line));
+  println!("Part 2: {}", found_houses(&line, true));
 }
 
 fn main() {
