--- a/aoc/2016.md
+++ b/aoc/2016.md
@@ -12,3 +12,4 @@ This contains tasks from the [year 2016](https://adventofcode.com/2016). Go back
 
 - [Day 1](/aoc/2016/1/)
 - [Day 2](/aoc/2016/2/)
+- [Day 3](/aoc/2016/3/)
