updated cv links and years for studies

--- a/CV/CV_cs.tex
+++ b/CV/CV_cs.tex
@@ -9,6 +9,8 @@
 \let\openright=\clearpage
 
 \usepackage{hyperref}
+\usepackage{xcolor}
+\hypersetup{colorlinks=true,urlcolor=blue}
 
 \pagestyle{empty}
 
@@ -31,10 +33,10 @@
 \subsection*{Dosavadní studium}
 
 \begin{itemize}
-	\item Základní škola (1.-5. ročník): \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
-	\item Gymnázium (osmileté s dokončenou maturitou): \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín}
-	\item Bakalářské studium v oboru Informatika: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
-	\item Magisterské studium (zatím nedokončené) v oboru Diskrétní modely a algoritmy: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item 2007-2012: Základní škola -- \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
+	\item 2012-2020: Osmileté gymnázium s dokončenou maturitou -- \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín} 
+	\item 2020-2023: Bakalářské studium v oboru Informatika -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item 2023-nyní: Magisterské studium v oboru Diskrétní modely a algoritmy -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
 \end{itemize}
 
 \subsection*{Pracovní zkušenosti}
