--- a/CV/CV_en.tex
+++ b/CV/CV_en.tex
@@ -9,6 +9,8 @@
 \let\openright=\clearpage
 
 \usepackage{hyperref}
+\usepackage{xcolor}
+\hypersetup{colorlinks=true,urlcolor=blue}
 
 \pagestyle{empty}
 
@@ -31,10 +33,10 @@
 \subsection*{Previous studies}
 
 \begin{itemize}
-	\item Primary school (first 5 years): \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
-	\item High school (eight years with a finished diploma): \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín}
-	\item Bachelors studies in Computer science: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
-	\item Master studies (yet not finished) in Discrete models and algorithms: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item 2007-2012: Primary school -- \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
+	\item 2012-2020: High school (eight years with a finished diploma) -- \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín}
+	\item 2020-2023: Bachelors studies in Computer science -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item 2023-now: Master studies in Discrete models and algorithms -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
 \end{itemize}
 
 \subsection*{Previous experiences}
