--- a/CV/CV_cs.tex
+++ b/CV/CV_cs.tex
@@ -1,12 +1,7 @@
 \documentclass{article}
-\setlength\textwidth{170mm}
-\setlength\textheight{247mm}
-\setlength\oddsidemargin{-5mm}
-\setlength\evensidemargin{-5mm}
-\setlength\topmargin{0mm}
-\setlength\headsep{0mm}
-\setlength\headheight{0mm}
-\let\openright=\clearpage
+
+\usepackage{geometry}
+\geometry{a4paper,total={170mm,257mm},left=20mm,top=20mm}
 
 \usepackage{hyperref}
 \usepackage{xcolor}
@@ -17,7 +12,7 @@
 \begin{document}
 
 \begin{center}
-	\section*{Životopis}
+	\section*{Curriculum vitae}
 \end{center}
 
 \subsection*{Základní informace}
@@ -52,11 +47,9 @@ Co se týče lingvistiky, tak Český jazyk je samozřejmostí a k tomu solidní
 Ohledně jazyků, ale už ne lingvistických mám znalost následujících jazyků:
 
 \begin{itemize}
-	\item Pokročilá znalost \textbf{C++}.
-	\item Znalost jazyka \textbf{Java}.
-	\item Znalost jazyka \textbf{Python}.
-	\item Základní znalost \textbf{C\#}.
-	\item Základní znalost exotičtějšího funkcionálního jazyka \textbf{Haskell}.
+	\item Pokročilá znalost: \textbf{C++}.
+	\item Průměrná znalost: \textbf{Java}, \textbf{Python} a \textbf{Rust}.
+	\item Základní znalost: \textbf{C\#}, \textbf{Haskell} a \textbf{Perl}.
 \end{itemize}
 
 Nicméně se nebráním žádným jiným jazykům, protože dle mé filosofie je třeba znát obecné postup samozřejmostí ay a konkrétní znalost specifického jazyka je jen něco podobného "dialektům".
@@ -69,6 +62,6 @@ Nikdo není dokonalý a to samozřejmě znamená, že mám své neduhy. Jedním 
 
 Osobně preferuji pracovat na zařízeních s operačním systémem \textbf{Linux}, ale nevyhnu se ani práci na počítači mající\textbf{Windows}. S Linuxem se také pojí, že jsem fanouškem filosofie open-source aplikací.
 
-Spíše preferuji řešit problémy a navrhovat jejich řešení, než je "datlovat" do počítače. Kvůli tomu jsem si vybral Matfyz na rozdíl od jiných českých univerzit, které dokáží "vygenerovat" lepší developery, ale nemají tak velkou znalost matematiky a informatické teorie. S tím také zmíním, že ještě mám v plánu pokračovat magisterským studiem teoretické informatiky.
+Spíše preferuji řešit problémy a navrhovat jejich řešení, než je "datlovat" do počítače. Kvůli tomu jsem si vybral Matfyz na rozdíl od jiných českých univerzit, které dokáží "vygenerovat" lepší developery, ale nemají tak velkou znalost matematiky a informatické teorie.
 
 \end{document}
