--- a/CV/CV_en.tex
+++ b/CV/CV_en.tex
@@ -1,12 +1,7 @@
 \documentclass{article}
-\setlength\textwidth{170mm}
-\setlength\textheight{247mm}
-\setlength\oddsidemargin{-5mm}
-\setlength\evensidemargin{-5mm}
-\setlength\topmargin{0mm}
-\setlength\headsep{0mm}
-\setlength\headheight{0mm}
-\let\openright=\clearpage
+
+\usepackage{geometry}
+\geometry{a4paper,total={170mm,257mm},left=20mm,top=20mm}
 
 \usepackage{hyperref}
 \usepackage{xcolor}
@@ -17,7 +12,7 @@
 \begin{document}
 
 \begin{center}
-\section*{Resumé}
+\section*{Curriculum vitae}
 \end{center}
 
 \subsection*{General information}
@@ -53,10 +48,8 @@ Speaking of languages I will mention programming languages:
 
 \begin{itemize}
 	\item Advanced knowledge of \textbf{C++}.
-	\item Standard knowledge of \textbf{Java}.
-	\item Also standard knowledge of \textbf{Python}.
-	\item Basic knowledge of \textbf{C\#}.
-	\item Basic knowledge of a functional language \textbf{Haskell}.
+	\item Standard knowledge of \textbf{Java}, \textbf{Python} and \textbf{Rust}.
+	\item Basic knowledge of \textbf{C\#}, \textbf{Haskell} and \textbf{Perl}.
 \end{itemize}
 
 But I would state that I think of separate languages as a "dialects" and thus the theoretical knowledge of computer science and mathematics in general is far more important than learning specific languages which also change during the time.
@@ -70,7 +63,4 @@ No one is perfect and of course that means I have my flaws. One of them is that 
 Personally, I prefer to work on devices running \textbf{Linux}, but I can't avoid working on computers running \textbf{Windows}. Linux is also linked to the fact that I am a fan of the open-source application philosophy.
 
 I prefer to solve problems and design solutions rather than "date" them into the computer. This is why I chose Matfyz, unlike other Czech universities that can "generate" better developers, but do not have such a great knowledge of mathematics and computer theory.
-
-With that said, I will also mention that I still plan to pursue a master's degree in theoretical computer science.
-
 \end{document}
