--- a/CV/CV_cs.tex
+++ b/CV/CV_cs.tex
@@ -28,10 +28,10 @@
 \subsection*{Dosavadní studium}
 
 \begin{itemize}
-	\item 2007-2012: Základní škola -- \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
-	\item 2012-2020: Osmileté gymnázium s dokončenou maturitou -- \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín} 
-	\item 2020-2023: Bakalářské studium v oboru Informatika -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
 	\item 2023-nyní: Magisterské studium v oboru Diskrétní modely a algoritmy -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item 2020-2023: Bakalářské studium v oboru Informatika ukončený titulem Bc. -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item 2012-2020: Osmileté gymnázium s dokončenou maturitou -- \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín} 
+	\item 2007-2012: Základní škola -- \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
 \end{itemize}
 
 \subsection*{Pracovní zkušenosti}
