--- a/CV/CV_cs.tex
+++ b/CV/CV_cs.tex
@@ -1,67 +1,93 @@
 \documentclass{article}
 
 \usepackage{geometry}
-\geometry{a4paper,total={170mm,257mm},left=20mm,top=20mm}
+\geometry{a4paper,total={190mm,257mm},left=10mm,top=15mm}
 
 \usepackage{hyperref}
 \usepackage{xcolor}
 \hypersetup{colorlinks=true,urlcolor=blue}
+\usepackage{tablefootnote}
 
 \pagestyle{empty}
 
 \begin{document}
 
 \begin{center}
-	\section*{Curriculum vitae}
+	\section*{{\huge Curriculum vitae}}
 \end{center}
 
-\subsection*{Základní informace}
+\hfill
+
+\begin{minipage}[c]{.45\textwidth}
+	\subsection*{Osobní informace}
+	\begin{itemize}
+		\item Jméno: \textit{Tomáš Turek}
+		\item Narození: \textit{24.03.2001}
+		\item Původ: \textit{Olomouc, Česká republika}
+		\item Mail: \href{mailto:tom.turek@atlas.cz}{\textit{tom.turek@atlas.cz}}
+		\item Github: \href{https://github.com/metury}{\textit{metury}}
+		\item Řidíčský průkaz: \textit{B}.
+	\end{itemize}
+\end{minipage}
+\hfill
+\begin{minipage}[c]{.5\textwidth}
+	\subsection*{Technologie a programovací jazyky}
+	\begin{itemize}
+		\item Pokročilá znalost: \textit{C++} a \textit{Qt}.
+		\item Průměrná znalost: \textit{Java}, \textit{Python} a \textit{Rust}.
+		\item Základní znalost: \textit{C\#}, \textit{Haskell} a \textit{Perl}.
+	\end{itemize}
+	
+	\subsection*{Jazyky}
+	\begin{itemize}
+		\item Pokročilá znalost: \textit{Čeština}, \textit{Angličtina}.
+		\item Základní znalost: \textit{Němčina}.
+	\end{itemize}
+\end{minipage}
+
+\subsection*{Studium}
+
+\begin{table}[!ht]\centering
+	\begin{tabular}{p{20mm} p{50mm} p{80mm} p{20mm}}
+		\textit{Roky} & \textit{Typ studia} & \textit{Škola} & \textit{Zakončení} \\
+		2023-2025\tablefootnote{Plánované ukončení studia.} & Diskrétní modely a algoritmy & \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta} & -- \\
+		2020-2023 & Informatika & \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta} & Titul Bc. \\
+		2012-2020 & Osmileté gymnázium & \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín} & Maturita \\
+		2007-2012 & Základní škola & \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc} & \\
+	\end{tabular}
+\end{table}
+
+\subsection*{Projekty na kterých jsem pracoval}
 
 \begin{itemize}
-	\item Jméno: \textit{Tomáš Turek}
-	\item Datum narození: \textit{24.03.2001}
-	\item Původ: \textit{Olomouc, Česká republika}
-	\item Mail: \href{mailto:tom.turek@atlas.cz}{\textit{tom.turek@atlas.cz}}
-	\item Github: \href{https://github.com/metury}{\textit{metury}}
-\end{itemize}
-
-\subsection*{Dosavadní studium}
-
-\begin{itemize}
-	\item 2023-nyní: Magisterské studium v oboru Diskrétní modely a algoritmy -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
-	\item 2020-2023: Bakalářské studium v oboru Informatika ukončený titulem Bc. -- \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
-	\item 2012-2020: Osmileté gymnázium s dokončenou maturitou -- \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín} 
-	\item 2007-2012: Základní škola -- \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
+	\item Aplikace \href{https://rodoc-app.github.io/}{rodoc} pro správu rodokmenu, napsaná v \texttt{C++} s pomocí \texttt{Qt}. Tento projekt byl součástí mé bakalářské prace.
+	\item Dalším menším projektem je moje řešení \href{https://adventofcode.com/}{advent of code}, které obsahuje i skript napsaný v jazyce \texttt{Perl} pro autoamtické vytváření projektů a stránek -- \href{https://github.com/metury/advent-of-code}{github repositář}.
 \end{itemize}
 
 \subsection*{Pracovní zkušenosti}
 
-\begin{itemize}
-\item Manuální brigáda v Dánsku. - Sice není ničím zajímavá z pohledu programátorských zkušeností, ale i tak vhodné zmínit práci v cizí zemi a cizím jazykem.
-\end{itemize}
+\begin{table}[!ht]\centering
+	\begin{tabular}{p{20mm} p{150mm}}
+		\textit{Roky} & \textit{Práce} \\
+		2019 a 2020 & Letní manuální brigáda v Dánsku -- třídění a příprava balíčků v logistické firmě Prime Cargo.
+	\end{tabular}
+\end{table}
 
 \subsection*{Osobní vlastnosti}
 
-Co se týče lingvistiky, tak Český jazyk je samozřejmostí a k tomu solidní znalost \textbf{Anglického jazyka }a základní znalost \textbf{Německého jazyka}.
-
-Ohledně jazyků, ale už ne lingvistických mám znalost následujících jazyků:
-
 \begin{itemize}
-	\item Pokročilá znalost: \textbf{C++}.
-	\item Průměrná znalost: \textbf{Java}, \textbf{Python} a \textbf{Rust}.
-	\item Základní znalost: \textbf{C\#}, \textbf{Haskell} a \textbf{Perl}.
+	\item Mile rád se naučím používat nové technologie a postupy, protože ve světě IT není nic stálé.
+	\item Vymýšlení řešení problémů, které se vyskytují na denní bázi, ať už v práci nebo v životě.
+	\item Považuji se za pracovitého člověka, který je ochotný a rád pomůže ostatním.
+	\item Mimo to se rád pohybuji ve společnosti dalších lidí. A také si potrpím na dochvilnosti.
+	\item Jelikož nikdo není dokonalý, tak i já mám nevýhody, jako je třeba občasná tvrdohlavost.
 \end{itemize}
 
-Nicméně se nebráním žádným jiným jazykům, protože dle mé filosofie je třeba znát obecné postup samozřejmostí ay a konkrétní znalost specifického jazyka je jen něco podobného "dialektům".
+\subsection*{Osobní zájmy a koníčky}
 
-Mezi své silnější stránky bych dal pracovitost a také vstřícnost a ochota pomoci ostatním. Stejně tak se nevyhíbám osobním kontaktům a rád komunikuji a řeším problémy. Další v pořadí je moje dochvilnost.
-
-Nikdo není dokonalý a to samozřejmě znamená, že mám své neduhy. Jedním z nich je, že pokud si myslím a jsem přesvědčený, že mám pravdu, tak nechci ukončit debatu tím, že se neshodneme (ale pokud protistrana dá dobré protiargumenty, tak jsme rychle schopný uznat, že jsme se mýlil). Určitě mám více chyb, ale buď je úmyslně přehlížím anebo se je snažím eliminovat.
-
-\subsection*{Zájmy a preference}
-
-Osobně preferuji pracovat na zařízeních s operačním systémem \textbf{Linux}, ale nevyhnu se ani práci na počítači mající\textbf{Windows}. S Linuxem se také pojí, že jsem fanouškem filosofie open-source aplikací.
-
-Spíše preferuji řešit problémy a navrhovat jejich řešení, než je "datlovat" do počítače. Kvůli tomu jsem si vybral Matfyz na rozdíl od jiných českých univerzit, které dokáží "vygenerovat" lepší developery, ale nemají tak velkou znalost matematiky a informatické teorie.
+\begin{itemize}
+	\item Několik let (zhruba 8) jsem hrál závodně florbal a i nadále, když se vyskytne příležitost, tak si zahraji.
+	\item Hra na příčnou flétnu. Naučil jsem se při navštěvování \href{https://www.zus-zerotin.cz/}{ZUŠ Žerotín}, kde jsem mimo sólovou hru hrál i v komorních uskupeních a také sborech, s kterými jsme mimo jiné soutěžili v zahraničích přehlídkách.
+\end{itemize}
 
 \end{document}
