updated english version

--- a/CV/CV_en.tex
+++ b/CV/CV_en.tex
@@ -73,21 +73,21 @@
 	\end{tabular}
 \end{table}
 
-\subsection*{Personal characteristics} \textcolor{red}{[TODO]}
+\subsection*{Personal characteristics}
 
-%\begin{itemize}
-%	\item Mile rád se naučím používat nové technologie a postupy, protože ve světě IT není nic stálé.
-%	\item Vymýšlení řešení problémů, které se vyskytují na denní bázi, ať už v práci nebo v životě.
-%	\item Považuji se za pracovitého člověka, který je ochotný a rád pomůže ostatním.
-%	\item Mimo to se rád pohybuji ve společnosti dalších lidí. A také si potrpím na dochvilnosti.
-%	\item Jelikož nikdo není dokonalý, tak i já mám nevýhody, jako je třeba občasná tvrdohlavost.
-%\end{itemize}
+\begin{itemize}
+	\item I'm happy to learn new technologies and practices because nothing stays the same in the world of IT.
+	\item Coming up with solutions to problems that occur on a daily basis, whether at work or in personal life.
+	\item I consider myself a hardworking person who is willing and happy to help others.
+	\item Besides, I like to be in the company of other people. And I'm also a very punctual.
+	\item Since no one is perfect, I also have some disadvantages, such as occasional stubbornness.
+\end{itemize}
 
-\subsection*{Free time hobbies} \textcolor{red}{[TODO]}
+\subsection*{Free time hobbies}
 
-%\begin{itemize}
-%	\item Několik let (zhruba 8) jsem hrál závodně florbal a i nadále, když se vyskytne příležitost, tak si zahraji.
-%	\item Hra na příčnou flétnu. Naučil jsem se při navštěvování \href{https://www.zus-zerotin.cz/}{ZUŠ Žerotín}, kde jsem mimo sólovou hru hrál i v komorních uskupeních a také sborech, s kterými jsme mimo jiné soutěžili v zahraničích přehlídkách.
-%\end{itemize}
+\begin{itemize}
+	\item I played floorball competitively for several years and I still play it sometimes when the opportunity arises.
+	\item Also playing the flute. I learned it while attending the \href{https://www.zus-zerotin.cz/}{Žerotín Music School}, where, apart from playing solo, I also played in smaller groups and also in bigger groups, with which we competed, among other things, in foreign festivals.
+\end{itemize}
 
 \end{document}
